<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/onekey_backupbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onekeybackup" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/onekey_restorebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onekeyrestore" />

        

    </TableRow>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>